--- a/main.user.css
+++ b/main.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Darker Ryver
 @namespace      github.com/darkerweb
-@version        1.0.1
+@version        1.1.0
 @description    Darker theme for Ryver
 @homepageURL    https://github.com/darkerweb/ryver
 @supportURL     https://github.com/darkerweb/ryver/issues
@@ -182,5 +182,9 @@
     .my-settings-dialog__body *:not(input) {
         background: #282a36 !important;
         color: white !important;
+    }
+   
+    mark {
+        background: #ffb86c;
     }
 }
