--- a/dark.css
+++ b/dark.css
@@ -8,7 +8,7 @@
 @updateURL      https://cdn.jsdelivr.net/gh/darkerweb/ryver@latest/dark.css
 @license        MIT
 ==/UserStyle== */
-.theme-novus-dark .detail, .theme-novus-dark .detail, .theme-novus-dark .chat-common, .theme-novus-dark .chat-common .chat-common__last-seen-label, body:not(.is-phone).theme-novus-dark .view-header, .theme-novus-dark .chat-common .chat-common__message-container, .scene-space-tab-button:hover, .view:nth-child(3) > div > div, .view:nth-child(3) > div > div > div, .post-list .scroll-container {
+.theme-novus-dark .detail, .theme-novus-dark .detail, .theme-novus-dark .chat-common, .theme-novus-dark .chat-common .chat-common__last-seen-label, body:not(.is-phone).theme-novus-dark .view-header, .theme-novus-dark .chat-common .chat-common__message-container, .scene-space-tab-button:hover, .view:nth-child(3) > div > div, .view:nth-child(3) > div > div > div, .post-list .scroll-container, .view > div, .view-container.pane__container, .notification-list__item-body, .notification-list__item-container {
     background-color:  #121212!important;
 }
 /*black*/
@@ -16,7 +16,7 @@
     background: black;
 }
 /*black but important*/
-body:not(.is-phone).theme-novus-dark .tabbed__sidebar-tag, body:not(.is-phone).theme-novus-dark .tabbed__sidebar-tag:after, body:not(.is-phone).theme-novus-dark .tabbed__sidebar-tag:hover{
+body:not(.is-phone).theme-novus-dark .tabbed__sidebar-tag, body:not(.is-phone).theme-novus-dark .tabbed__sidebar-tag:after, body:not(.is-phone).theme-novus-dark .tabbed__sidebar-tag:hover, .view:nth-child(3) > div > div > div > div > div > div > div:nth-child(1) > button > span, .is-loading{
     background: black!important;
 }
 .chat-message__item-action-container, .chat-message__item-retry-container{
@@ -69,7 +69,6 @@ div[style = "position: fixed; inset: 0px; z-index: 2000;"] > div > div > div > d
     border-radius:20px;
     padding-left:15px!important;
 }
-.is-loading{background: black!important;}
 .bootstrap__logo::after {
     content: "DARK";
     display: block;
@@ -88,4 +87,11 @@ div[style = "position: fixed; inset: 0px; z-index: 2000;"] > div > div > div > d
     height: 14px;
     position: absolute;
     right: -4px!important;
+}
+div[style = "position: fixed; inset: 0px; z-index: 2000;"] > div > div > div > div > div:nth-child(4){
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+.view:nth-child(3) > div > div > div > div > div > div > div:nth-child(1) > button{
+    border:none!important;
 }
